# C-Web-Parser

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Untitled.ipynb  cmake_install.cmake  main.cpp  main_mpi.cpp  main_seq.cpp  mpi_webparser  par_pd.txt  parallel_webparser  pd.txt  readme.md  semaphore.cpp  seq_pd.txt  seq_time.txt  time_par.txt  time_seq.txt  webparser
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
